# Lunar-ROADSTER

./: .gitignore  .gitmodules  README.md  autonomy_start.sh  set-udev-rules-orin.sh  start_sensors.sh  startup.zsh  startup_tmux.sh
lr_ws/src/ben/: CMakeLists.txt  package.xml
lr_ws/src/ben/config/: ben_params.yaml
lr_ws/src/ben/include/ben/: ben.hpp  fsm.hpp
lr_ws/src/ben/launch/: ben.launch.py
lr_ws/src/ben/src/: ben_main.cpp  ben_node.cpp  fsm.cpp
lr_ws/src/ceiltrack/: CMakeLists.txt  package.xml
lr_ws/src/ceiltrack/ceiltrack_utils/: cal.py  caldata.txt  caldata_large.txt  camera_matrix.npy  camera_matrix_large.npy  dist_coeffs.npy  dist_coeffs_large.npy  undistort.py
lr_ws/src/ceiltrack/config/: ceiltrack_params.yaml
lr_ws/src/ceiltrack/include/ceiltrack/: ceiltrack.hpp  fisheye.hpp
lr_ws/src/ceiltrack/launch/: ceiltrack.launch.py
lr_ws/src/ceiltrack/src/: ceiltrack_main.cpp  ceiltrack_node.cpp  fisheye.cpp
lr_ws/src/imu/: CMakeLists.txt  package.xml
lr_ws/src/imu/config/: imu_static_tf_params.yaml
lr_ws/src/imu/include/imu/: imu_base_link_conversion_node.hpp
lr_ws/src/imu/launch/: imu_launch.py
lr_ws/src/imu/src/: imu_base_link_conversion_main.cpp  imu_base_link_conversion_node.cpp
lr_ws/src/localization/: CMakeLists.txt  package.xml
lr_ws/src/localization/config/: ekf_global_node_params.yaml  ekf_odom_node_params.yaml  total_station_beacon_static_tf_params.yaml
lr_ws/src/localization/include/localization/: ceiltrack_transformer_node.hpp  imu_tf_publisher.hpp  kalman_filter_linear.hpp  slip_estimate_node.hpp  ts_prism_transformer.hpp
lr_ws/src/localization/launch/: ekf_localization.launch.py
lr_ws/src/localization/src/: ceiltrack_transformer_main.cpp  ceiltrack_transformer_node.cpp  imu_tf_publisher.cpp  imu_tf_publisher_main.cpp  kalman_filter_linear.cpp  slip_estimate_main.cpp  slip_estimate_node.cpp  ts_prism_transformer.cpp  ts_prism_transformer_main.cpp
lr_ws/src/lx_mapping/: CMakeLists.txt
lr_ws/src/lx_mapping/include/lx_mapping/: global_mapping.hpp  local_mapping.hpp  pc_handler.hpp
lr_ws/src/lx_mapping/launch/: mapping.launch.py  rviz_config.rviz
lr_ws/src/lx_mapping/src/: global_mapping.cpp  global_mapping_node.cpp  local_mapping.cpp  local_mapping_node.cpp  pc_handler.cpp
lr_ws/src/navigation/: CMakeLists.txt  package.xml
lr_ws/src/navigation/config/: global_plan_params.yaml  global_planner_controller.yaml  global_planner_controller.yml  local_controller_params.yaml
lr_ws/src/navigation/include/navigation/: global_planner_controller_node.hpp  global_planner_node.hpp  manipulation_planner.hpp
lr_ws/src/navigation/launch/: global_planner_launch.launch.py  navigation_launch.launch.py
lr_ws/src/navigation/maps/: crater_ring_map.pgm  crater_ring_map.yaml  crater_ring_map_sparse.pgm  crater_ring_map_sparse.yaml  global_costmap.pgm  global_costmap.yaml  global_costmap_old.pgm  map_2.yaml
lr_ws/src/navigation/rviz/: global_planner.rviz
lr_ws/src/navigation/src/: autonomy_command.cpp  basic_astar.cpp  controller_executor.cpp  crater_centroids_pub.cpp  crater_diameters_pub.cpp  global_planner_controller_main.cpp  global_planner_controller_node.cpp  global_planner_main.cpp  global_planner_node.cpp  local_controller_main.cpp  manipulation_planner.cpp
lr_ws/src/perception/: CMakeLists.txt  package.xml  setup.py
lr_ws/src/perception/action/: CraterDetect.action
lr_ws/src/perception/config/: manipulation.yaml
lr_ws/src/perception/include/perception/: common.hpp  goal_planner.hpp  robot_pose_extractor.hpp
lr_ws/src/perception/perception/: detection.py  detection_ankit.py  test_detection.py
lr_ws/src/perception/perception/include/: robot_pose_extractor.hpp
lr_ws/src/perception/perception/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lr_ws/src/perception/perception/log/: latest_build
lr_ws/src/perception/scripts/: perception_call.cpp
lr_ws/src/perception/src/: common.cpp  robot_pose_extractor.cpp
lr_ws/src/planning/: CMakeLists.txt  package.xml
lr_ws/src/planning/config/: behavior_executive_params.yaml
lr_ws/src/planning/include/planning/: behavior_executive_node.hpp  goal_planner.hpp  planning_util.hpp  transport_planner.hpp
lr_ws/src/planning/include/planning/fsm/: end_mission.hpp  following_trajectory.hpp  fsm.hpp  get_transport_goals.hpp  get_worksystem_trajectory.hpp  goals_remaining.hpp  map_explored.hpp  plan_transport.hpp  ready.hpp  site_work_done.hpp  (+1 more)
lr_ws/src/planning/saved_maps/: elevation_map_1d.csv  elevation_map_2d.csv
lr_ws/src/planning/src/: behavior_executive_main.cpp  behavior_executive_node.cpp  navigation_util.cpp  planning_util.cpp  transport_planner.cpp
lr_ws/src/planning/src/fsm/: end_mission.cpp  following_trajectory.cpp  fsm.cpp  get_transport_goals.cpp  get_worksystem_trajectory.cpp  goals_remaining.cpp  map_explored.cpp  plan_transport.cpp  site_work_done.cpp  update_map.cpp
lr_ws/src/sensing/: CMakeLists.txt  package.xml
lr_ws/src/sensing/config/: fisheye_params.yaml  set_fisheye.sh  zed_static_tf_params.yaml
lr_ws/src/sensing/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lr_ws/src/sensing/config/log/: latest_build
lr_ws/src/sensing/launch/: sensing_launch.py
lr_ws/src/sensing/src/: pc_handler.cpp  pc_handler_node.cpp
lr_ws/src/skycam/: CMakeLists.txt  package.xml
lr_ws/src/skycam/config/: skycam_data_collection_params.yaml  skycam_params.yaml
lr_ws/src/skycam/include/skycam/: skycam_data_collection.hpp
lr_ws/src/skycam/skycam_util/: eval.py  export_torchscript.py  skycam_convnet.pt  skycam_convnet_ts.pt  train.py  train_xyz.py  utils.py
lr_ws/src/skycam/skycam_util/eval/: eval_files.txt  eval_labels.txt
lr_ws/src/skycam/src/: skycam_data_collection_main.cpp  skycam_data_collection_node.cpp
lr_ws/src/validation/: CMakeLists.txt  package.xml
lr_ws/src/validation/config/: validation_params.yaml
lr_ws/src/validation/include/validation/: validation.hpp
lr_ws/src/validation/launch/: validation.launch.py
lr_ws/src/validation/src/: backup.cpp  validation_main.cpp  validation_node.cpp
(+1019 files in other folders)
