<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensing</name>
  <version>1.0.1</version>
  <description>Sensing launch files for Lunar ROADSTER project</description>
  <maintainer email="boxiangf@andrew.cmu.edu">Boxiang Fu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
